--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ html {
     font-style: normal;
     font-weight: 400;
     font-size: 40px;
-    line-height: 47px;
+    line-height: 117.5%;
     color: #FFFFFF;
     margin-bottom: 5px;
 }
@@ -204,22 +204,101 @@ html {
     left: 0px;
     top: 0px;
     border-radius: 50px;
+    /*margin-bottom: 10px;*/
 }
+
+.projects__items--title-games {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.items__title-game--title{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 117.5%;
+    color: #FFFFFF;
+    margin-bottom: 5px;
+}
+
+.items__title-game--line {
+    background: #ced6e4;
+    box-shadow: 0px 0px 14px rgba(44, 102, 195, 0.5);
+    border-radius: 50px;
+    height: 8px;
+    width: 80px;
+    left: 0px;
+    top: 0px;
+    border-radius: 50px;
+}
+
+.projects__items--title-other {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.items__title-other--title{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 117.5%;
+    color: #FFFFFF;
+    margin-bottom: 5px;
+}
+
+.items__title-other--line {
+    background: #ced6e4;
+    box-shadow: 0px 0px 14px rgba(44, 102, 195, 0.5);
+    border-radius: 50px;
+    height: 8px;
+    width: 80px;
+    left: 0px;
+    top: 0px;
+    border-radius: 50px;
+}
+
 
 .page__projects--items {
     display: flex;
-    /*flex: 1 1 100%;*/
+    justify-content: center;
+    flex-direction: column;
+    /*flex-wrap: wrap;
+    gap: 20px;*/
+}
+
+.projects__items--games {
+    display: flex;
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    /*max-width: 820px;*/
+    margin-bottom: 20px;
+}
+
+.projects__items--others {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+
 }
 
 .projects__items--item {
-    border-radius: 15px 15px 0px 0px;
+    /*border-radius: 15px 15px 0px 0px;*/
+    min-width: 400px;
 }
 
 .items__item--image {
+    width: 400px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 15px 15px 0px 0px;
+
 }
 
 .items__item--description {
@@ -496,6 +575,7 @@ html {
     line-height: 118.75%;
     text-align: center;
     color: #FFFFFF;
+    margin-bottom: 10px;
 }
 
 .text__title--text {
